--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
+    "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4"
   },
   "publishConfig": {
